# ParSEval

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
docs/: solver.md  symbolic-engine-architecture.md
docs/superpowers/plans/: 2026-05-27-targeted-enrichment.md  2026-05-28-coverage-model-improvement.md  2026-05-29-speculative-layer-enhancement.md
docs/superpowers/specs/: 2026-05-27-targeted-enrichment-design.md  2026-05-28-coverage-model-improvement-design.md  2026-05-30-domain-solver-soundness-design.md  2026-06-01-speculate-row-scoped-gold-witness-design.md
src/parseval/: disprover.py  dtype.py  helper.py  logger.py  main.py  states.py
src/parseval/domain/: compiler.py
src/parseval/instance/: core.py  loader.py
src/parseval/plan/: planner.py  rex.py
src/parseval/solver/: __init__.py  domain.py  smt_solver.py  smt_translate.py  smt_types.py  types.py  unified.py
src/parseval/symbolic/: __init__.py  constraints.py  engine.py  evaluator.py  speculate.py  types.py
tests/: test_instance.py  test_solver.py
tests/domain/: test_compiler.py  test_provider_resolution.py
tests/experiment/: test_lasso_sqlite.py  test_sqlite.py  test_sqlite_datagen.py
tests/plan/: test_column_enrichment.py  test_planner_tree_shape.py  test_rex.py
tests/solver/: legacy  test_domain.py  test_smt.py  test_solver.py  test_solver_constraint.py  test_types.py
tests/symbolic/: test_constraint_generation.py  test_distinct_eval.py  test_enrichment.py  test_speculate_enhancements.py  test_speculate_gold_non_empty.py  test_subplan_eval.py
(+7 files in other folders)
